@@ -1,1 +1,61 @@
 秦金卫
+
+第 3 课 JVM 核心技术（三）：调优分析与面试经验
+1. GC 日志解读与分析
+   究竟是 Young GC Full GC
+   还是 Minor GC（小型 GC） Major GC（大型 GC）
+   串行 GC java -XX:+UseSerialGC
+   并行 GC java -XX:+UseParallelGC
+   CMS GC java -XX:+UseConcMarkSweepGC
+   G1 GC java -XX:+UseG1GC
+   CMSGC日志分析
+       阶段 1：Initial Mark（初始标记）
+       阶段 2：Concurrent Mark（并发标记）
+       阶段 3：Concurrent Preclean（并发预清理）
+       阶段 4： Final Remark（最终标记）
+       阶段 5： Concurrent Sweep（并发清除）
+       阶段 6： Concurrent Reset（并发重置）
+   G1日志分析
+       Evacuation Pause: young（纯年轻代模式转移暂停）
+       Concurrent Marking（并发标记）
+       阶段 1: Initial Mark（初始标记）
+       阶段 2: Root Region Scan（Root区扫描）
+       阶段 3: Concurrent Mark（并发标记）
+       阶段 4: Remark（再次标记）
+       阶段 5: Cleanup（清理）
+       Evacuation Pause (mixed)（转移暂停: 混合模式）
+       Full GC (Allocation Failure)
+   工具:GCEasy,GCViewer
+   总结：
+        如何查看/分析不同 GC 配置下的日志信息？
+        各种 GC 有什么特点和使用场景？
+2. JVM 线程堆栈数据分析
+   JVM线程模型示意图
+   JVM 内部线程分类:VM 线程,定时任务线程,GC 线程,编译器线程,信号分发线程
+   安全点：
+        1. 方法代码中被植入的安全点检测入口；
+        2. 线程处于安全点状态：线程暂停执行，这个时候线程栈不再发生改变；
+        3. JVM 的安全点状态：所有线程都处于安全点状态。
+   JVM 支持多种方式来进行线程转储:
+        1. JDK 工具, 包括: jstack 工具, jcmd 工具, jconsole, jvisualvm, Java Mission Control 等；
+        2. Shell 命令或者系统控制台, 比如 Linux 的 kill -3, Windows 的 Ctrl + Break 等；
+        3. JMX 技术， 主要是使用 ThreadMxBean。
+   jvisualvm 线程分析
+   fastthread 线程分析
+   https://www.cnblogs.com/chiangchou/p/jvm-4.html
+3. 内存分析与相关工具
+   思考一个问题：
+        一个对象具有100个属性，与100个对象每个具有1个属性，哪个占用的内存空间更大？
+   一个 Java 对象占用多少内存？
+        可以使用 Instrumentation.getObjectSize()方法来估算一个对象占用的内存空间。
+        JOL (Java Object Layout) 可以用来查看对象内存布局。
+4. JVM 问题分析调优经验
+5. GC 疑难情况问题分析
+6. JVM 常见面试问题汇总
+
+
+
+
+
+
+
